ocaml (3.10.0-8) unstable; urgency=low

  [ Stefano Zacchiroli ]
  * CDBS class
    - invoke ocamldoc after dh_install has been run (otherwise ocamldoc is
      likely to generate empty API references ...)
    - add support for automatic generation of doc-base entries for ocamldoc
      generated API reference
  * debian/ocaml-base-nox.README.Debian
    - add an entry describing the requirement for compiling ocamldoc-generated
      LaTeX documentation (closes: #420782)

 -- Stefano Zacchiroli <zack@debian.org>  Sun, 02 Sep 2007 18:32:17 +0200

ocaml (3.10.0-7) unstable; urgency=low

  [ Sylvain Le Gall ]
  * add patch not-native-no-aspp to workaround FTBFS, as described upstream in
    bug 4375 (closes: #429185)
  * don't ignore make clean error
  * move menu section of ocaml interpreter to Applications/Programming
    to comply with new menu structure


  [ Stefano Zacchiroli ]
  * CDBS class
    - add support for specifying the target dir for generated documentation
    - various fixes in ocamldoc invocation

 -- Sylvain Le Gall <gildor@debian.org>  Sat, 01 Sep 2007 22:33:52 +0200

ocaml (3.10.0-6) unstable; urgency=low

  [ Stefano Zacchiroli ]
  * debian/ocaml-nox.dirs.in
    - avoid creating empty /usr/include/ocaml/* directory (closes: #439017)
  * CDBS class
    - add support for automatic ocamldoc HTML documentation generation
  * Policy
    - add an appendix about the CDBS class with some minimal information and
      pointers to the commented .mk files

 -- Stefano Zacchiroli <zack@debian.org>  Thu, 30 Aug 2007 15:54:24 +0200

ocaml (3.10.0-5) experimental; urgency=low

  [ Ralf Treinen ]
  * ocaml-mode.emacsen-install: do not hardcode the emacs flavours for which
    to compile ocaml-mode (closes: Bug#433082)
  * ocaml-mode: Bump primary dependency from emacs21 to emacs22.

  [ Stefano Zacchiroli ]
  * add patch arm_ccheckbound_typo, fix a typing error typo which makes ocaml
    FTBFS on arm
  * ocaml-source: install ocaml tarball as